# ai-generated-fastapi-app

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: items.py
app/tests/: test_items.py
